# EpochDashboard

./: .gitignore  PLAN.md  TODO.md
cpp/: CMakeLists.txt  README.md  vcpkg.json
cpp/cmake/: EpochDataSDK.cmake
cpp/include/epoch_dashboard/tearsheet/: area_chart_builder.h  arrow_converter.h  bar_chart_builder.h  boxplot_chart_builder.h  card_builder.h  chart_builder_base.h  chart_types.h  column_builder.h  dashboard_builders.h  dataframe_converter.h  heatmap_chart_builder.h  histogram_chart_builder.h  line_builder.h  lines_chart_builder.h  numeric_line_builder.h  numeric_lines_chart_builder.h  pie_chart_builder.h  scalar_converter.h  series_converter.h  table_builder.h  tearsheet_builder.h  validation_utils.h  xrange_chart_builder.h
cpp/src/: CMakeLists.txt  dashboard.cpp
cpp/src/tearsheet/builders/: CMakeLists.txt  area_chart_builder.cpp  arrow_converter.cpp  bar_chart_builder.cpp  boxplot_chart_builder.cpp  card_builder.cpp  column_builder.cpp  dataframe_converter.cpp  heatmap_chart_builder.cpp  histogram_chart_builder.cpp  line_builder.cpp  lines_chart_builder.cpp  numeric_line_builder.cpp  numeric_lines_chart_builder.cpp  pie_chart_builder.cpp  scalar_converter.cpp  series_converter.cpp  table_builder.cpp  tearsheet_builder.cpp  validation_utils.cpp  xrange_chart_builder.cpp
cpp/tests/: CMakeLists.txt  test_area_chart_builder.cpp  test_bar_chart_builder.cpp  test_boxplot_chart_builder.cpp  test_card_builder.cpp  test_chart_builder_base.cpp  test_chart_validation.cpp  test_dataframe_factory.cpp  test_heatmap_chart_builder.cpp  test_histogram_chart_builder.cpp  test_line_builder.cpp  test_lines_chart_builder.cpp  test_numeric_line_builder.cpp  test_numeric_lines_chart_builder.cpp  test_pie_chart_builder.cpp  test_scalar_converter.cpp  test_series_converter.cpp  test_table_builder.cpp  test_tearsheet_builder.cpp  test_tearsheet_builder_mock.cpp  test_xrange_chart_builder.cpp
js/: .eslintrc.json  .gitignore  PR.md  README.md  TEARSHEET_PACKAGE_STRATEGY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
js/.next/: prerender-manifest.json  trace
js/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
js/.next/server/pages/: _app.js  _error.js  index.js
js/.next/server/vendor-chunks/: @swc.js  next.js
js/.next/static/chunks/: react-refresh.js  webpack.js
js/.next/static/webpack/: webpack.45c06f058ba96e1f.hot-update.js  webpack.565d77603d70d3ea.hot-update.js  webpack.6a10e2cf8e53d3f7.hot-update.js  webpack.ffb5b17d4e6be776.hot-update.js
js/.next/types/: routes.d.ts  validator.ts
js/apps/examples/: README.md
js/apps/examples/basic-usage/: index.tsx
js/apps/examples/custom-theming/: index.tsx
js/apps/examples/file-upload/: index.tsx
js/apps/playground/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
js/apps/playground/components/: Navigation.tsx
js/apps/playground/examples/: AreaChartExample.tsx  BarChartExample.tsx  BoxPlotExample.tsx  CardExample.tsx  HeatMapExample.tsx  HistogramExample.tsx  LineChartExample.tsx  PieChartExample.tsx  TableExample.tsx  XRangeExample.tsx
js/apps/playground/hooks/: useOverlay.ts  useTradeAnalytics.ts
js/apps/playground/pages/: _app.tsx  analytics-form.tsx  debug.tsx  index.tsx  test-tearsheet.tsx  trade-analytics.tsx  unified-dashboard.tsx
js/apps/playground/scripts/: test-server.js  test-server.mjs
js/apps/playground/styles/: globals.css
js/apps/playground/utils/: areaChartMocks.ts  barChartMocks.ts  boxPlotMocks.ts  chartMocks.ts  heatMapMocks.ts  histogramMocks.ts  pieChartMocks.ts  tableMocks.ts  xRangeMocks.ts
js/pages/: debug.tsx  index.tsx
js/src/: index.ts
js/src/components/: Card.tsx  Table.tsx
js/src/components/charts/: AreaChart.tsx  BarChart.tsx  BoxPlot.tsx  HeatMap.tsx  Histogram.tsx  LineChart.tsx  PieChart.tsx  XRange.tsx  XRangeTest.tsx  index.ts
js/src/config/: theme.ts
js/src/examples/: App.tsx  CardExample.tsx
js/src/hooks/: useChartOptions.ts
js/src/styles/: globals.css
js/src/types/: dashboard.ts  proto.ts
js/src/utils/: areaChartMocks.ts  barChartMocks.ts  boxPlotMocks.ts  chartHelpers.ts  heatMapMocks.ts  histogramMocks.ts  mockData.ts  pieChartMocks.ts  protoHelpers.ts  protoToHighcharts.ts  tableMocks.ts  xRangeMocks.ts
tests/: test_chart_builders.cpp
(+36 files in other folders)
